# neural-net

./: Cargo.toml
benches/: linear_layer.rs
src/: cost.rs  ghost.rs  lib.rs  linear.rs  matrix.rs  parameters.rs  relu.rs  tensor.rs
src/activation/: mod.rs
src/cost/: mod.rs
src/optim/: mod.rs
tests/: linear_layer.rs  simplest_net.rs  tensor.rs
